# vector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile
.github/workflows/: CI.yml  Documentation.yml  Release.yml
docs/Vector/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  structvector__s.html  structvector__s.js  vector_8c.html  vector_8c.js  vector_8c__incl.md5  vector_8c_a03e4f195e185c321ede45a023da9bbed_icgraph.md5  vector_8c_a04300d5fbd80537d62376d156c9ec278_icgraph.md5  vector_8c_a0abea506ea6c562b65e153d7a2f39a53_icgraph.md5  vector_8c_a0cb1843ea9e466c0da6e704969fbf20b_icgraph.md5  vector_8c_a15a77c0234cc96dea433b2106cb55f37_icgraph.md5  vector_8c_a1caea6c984ab27ed98a3eef609ad77fc_icgraph.md5  vector_8c_a253fb746d6aeed908099a6387453b282_icgraph.md5  vector_8c_a2b9322e48ab0afd5795cae35faa40e5c_icgraph.md5  vector_8c_a2d09f0a5368447bae3801583ca227055_cgraph.md5  vector_8c_a2d09f0a5368447bae3801583ca227055_icgraph.md5  vector_8c_a352b425ab4789826b45f00f5e440f45a_cgraph.md5  vector_8c_a352b425ab4789826b45f00f5e440f45a_icgraph.md5  vector_8c_a55043a3f730de6667636a5d0766dc172_icgraph.md5  vector_8c_a6a5ee289dfbec2bc53d1f677d55604e6_icgraph.md5  vector_8c_a6b34223d9ed00195819977242bcfe5cf_icgraph.md5  (+11 more)
docs/Vector/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
docs/coverage/: index.html  index.vector.c.67518a7ce483c9aae3d7817db7ef4755.html
include/: vector.h
lib/: setup_criterion.sh  setup_submodules.sh
source/: CMakeLists.txt  vector.c
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  vector_of_int.c  vector_of_string.c  vector_of_vector.c
tests/unit_tests/: CMakeLists.txt  vector_at.c  vector_back.c  vector_capacity.c  vector_clear.c  vector_constructor.c  vector_destructor.c  vector_emplace.c  vector_emplace_back.c  vector_empty.c  vector_erase.c  vector_front.c  vector_operation_eq.c  vector_pop_back.c  vector_print.c  vector_print_at.c  vector_shrink_to_fit.c  vector_swap.c  vector_tests.c
tests/vector/: CMakeLists.txt  vector_tests.c
