set(VECTOR_TESTS_ROOT ${PROJECT_SOURCE_DIR}/tests/vector)
set(VECTOR_INCLUDE_ROOT ${PROJECT_SOURCE_DIR}/include)

set(TARGET vector_tests)
set(SOURCE
    ${VECTOR_TESTS_ROOT}/vector_tests.c
)

add_executable(${TARGET} ${SOURCE} ${VECTOR_SOURCE})

add_test(${TARGET} ${TARGET})

target_include_directories(${TARGET}
    PUBLIC ${VECTOR_INCLUDE_ROOT}
)

set_target_properties(${TARGET}
    PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
    ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
)
